# sob

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  evaluate.py  pyproject.toml  requirements.txt
.github/workflows/: publish-leaderboard.yml  validate-leaderboard.yml
data/audio_responses/: response_DeepSeek-R1-Distill-Qwen-32B_audio.jsonl  response_Ministral-3-14B-Instruct-2512_audio.jsonl  response_NVIDIA-Nemotron-3-Nano-30B-A3B-BF16_audio.jsonl  response_Qwen3-235B-A22B-Instruct-2507_audio.jsonl  response_Qwen3-30B-A3B-Instruct-2507_audio.jsonl  response_Qwen3.5-35B-A3B_audio.jsonl  response_claude-opus-4-6_audio.jsonl  response_claude-opus-4-7_audio.jsonl  response_claude-sonnet-4-6_audio.jsonl  response_deepseek_deepseek-v4-pro_audio.jsonl  response_gemini-2.5-flash_audio.jsonl  response_gemini-2.5-pro_audio.jsonl  response_gemini-3-flash_audio.jsonl  response_gemini-3.1-pro-preview_audio.jsonl  response_gemini-3.5-flash_audio.jsonl  response_gemma-3-27b-it_audio.jsonl  response_gemma-4-31b-it_audio.jsonl  response_gpt-5.4-mini_audio.jsonl  response_gpt-5.5_audio.jsonl  response_gpt-oss_audio.jsonl  response_ibm-granite-4.0-h-small_audio.jsonl  response_inference-net-Schematron-8B_audio.jsonl  response_interfaze-beta_audio.jsonl  response_moonshotai_kimi-k2.6_audio.jsonl  response_openai-gpt-4.1_audio.jsonl  response_openai-gpt-5-4_audio.jsonl  response_openai-gpt-5-mini_audio.jsonl  response_openai-gpt-5_audio.jsonl  response_z-ai_glm-5.1_audio.jsonl  (+2 more)
scripts/: build_leaderboard.py
sob/: data_loader.py  run.py
utils/: config.py  logger.py  utils.py
(+289 files in other folders)
