[project]
name = "sob"
version = "0.1.3"
description = "The Structured Output Benchmark"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "datasets>=4.5.0",
    "matplotlib>=3.10.8",
    "numpy>=1.24,<2.3",
    "pandas>=3.0.1",
    "ruff>=0.15.2",
    "seaborn>=0.13.2",
    "pillow>=10.0.0",
    "python-dotenv>=1.2.1",
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
    "huggingface-hub>=0.22.0",
    "tqdm>=4.67.3",
    "transformers>=4.40.0",
    "sentence-transformers>=5.2.3",
    "torch>=2.10.0",
    "openai>=2.24.0",
    "anthropic>=0.75.0",
    "google-genai>=1.0.0",
    "pyarrow>=16.0.0",
]

[project.optional-dependencies]
vllm = ["vllm==0.17.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
